--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,6 +1,10 @@
 - defaults:
     link:
       relink: true
+    shell:
+      stdout: true
+      stderr: true
+
 
 - clean: ['~']
 
@@ -15,5 +19,7 @@
     # - ~/programming/tools/
     # - ~/.vim/undo-history
 
-#- shell:
-#  - [git submodule update --init --recursive, Installing submodules]
+- shell:
+  - 
+    command: ./setup_homebrew.zsh
+    stdin: true
