--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -13,6 +13,7 @@
 #    ~/.vim: vim
    ~/.zshrc: zshrc
    ~/.gitconfig: gitconfig
+   ~/.config/karabiner/karabiner.json: config/karabiner.json
     
 
 # - create:
