move gitconfig under ./config dir

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,7 +12,7 @@
 #    ~/.tmux.conf: tmux.conf
 #    ~/.vim: vim
    ~/.zshrc: zshrc
-   ~/.gitconfig: gitconfig
+   ~/.gitconfig: config/gitconfig
    ~/.config/karabiner/karabiner.json: config/karabiner.json
     
 
