--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,6 +12,7 @@
 #    ~/.tmux.conf: tmux.conf
 #    ~/.vim: vim
    ~/.zshrc: zshrc
+   ~/.zshenv: zshenv
    ~/.gitconfig: config/gitconfig
    ~/.config/karabiner/karabiner.json: config/karabiner.json
    ~/.config/bat/config: config/batconfig
