--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -17,7 +17,7 @@
     ~/.gitconfig: config/git/gitconfig
     ~/.gitconfig-freshbooks: config/git/gitconfig-freshbooks
     ~/.gitconfig-gsk: config/git/gitconfig-gsk
-    ~/.gitignore: config/git/gitignore
+    ~/.gitignore_global: config/git/gitignore_global
     ~/.config/karabiner: config/karabiner
     ~/.config/bat/config: config/batconfig
     ~/.aws/config: config/aws_config
