disable quit warning

--- a/misc/iterm2/com.googlecode.iterm2.plist
+++ b/misc/iterm2/com.googlecode.iterm2.plist
@@ -1250,6 +1250,10 @@
 			<string>/Users/illia.todorenko</string>
 		</dict>
 	</array>
+	<key>OnlyWhenMoreTabs</key>
+	<false/>
+	<key>PromptOnQuit</key>
+	<false/>
 	<key>SoundForEsc</key>
 	<false/>
 	<key>StatusBarIcon</key>
