add vscode settings installation

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -24,6 +24,8 @@
     ~/.config/karabiner: config/karabiner
     ~/.config/bat/config: config/batconfig
     ~/.aws/config: config/aws_config
+    ~/Library/Application Support/Code/User/settings.json: config/vscode/settings.json
+    ~/Library/Application Support/Code/User/keybindings.json: config/vscode/keybindings.json
 
 - shell:
   - command: chmod +x ./setup_ohmyzsh.zsh
