--- a/config/vscode/settings.json
+++ b/config/vscode/settings.json
@@ -1,29 +1,29 @@
 {
-    "window.zoomLevel": 1,
-    "workbench.preferredDarkColorTheme": "Visual Studio Dark",
-    "workbench.colorTheme": "Solarized Light",
-    "files.autoSave": "afterDelay",
-    "files.autoSaveDelay": 700,
-    "workbench.editor.enablePreview": false,
-    "explorer.autoReveal": false,
-    "workbench.editor.wrapTabs": true,
-    "explorer.openEditors.visible": 1,
-    "editor.renderWhitespace": "all",
-    "git.autofetch": true,
-    "window.openFoldersInNewWindow": "on",
-    "explorer.confirmDelete": false,
-    "rewrap.autoWrap.enabled": false,
-    "rewrap.wrappingColumn": 120,
-    "workbench.iconTheme": "material-icon-theme",
-    "terminal.integrated.fontFamily": "Fira Code",
     "editor.fontFamily": "Fira Code",
     "editor.fontLigatures": true,
     "editor.minimap.enabled": false,
+    "editor.renderWhitespace": "all",
     "editor.wordWrap": "off",
+    "explorer.autoReveal": false,
+    "explorer.confirmDelete": false,
+    "explorer.confirmDragAndDrop": false,
+    "explorer.openEditors.visible": 1,
+    "files.autoSave": "afterDelay",
+    "files.autoSaveDelay": 700,
+    "git.autofetch": true,
+    "git.confirmSync": false,
+    "github.copilot.editor.enableAutoCompletions": true,
     "peacock.affectActivityBar": false,
     "peacock.affectStatusBar": false,
-    "explorer.confirmDragAndDrop": false,
-    "git.confirmSync": false,
     "plantuml.server": "https://www.plantuml.com/plantuml",
-    "github.copilot.editor.enableAutoCompletions": true
+    "rewrap.autoWrap.enabled": false,
+    "rewrap.wrappingColumn": 120,
+    "terminal.integrated.fontFamily": "Fira Code",
+    "window.openFoldersInNewWindow": "on",
+    "window.zoomLevel": 1,
+    "workbench.colorTheme": "Solarized Light",
+    "workbench.editor.enablePreview": false,
+    "workbench.editor.wrapTabs": true,
+    "workbench.iconTheme": "material-icon-theme",
+    "workbench.preferredDarkColorTheme": "Visual Studio Dark"
 }
