--- a/config/vscode/settings.json
+++ b/config/vscode/settings.json
@@ -26,5 +26,7 @@
     "workbench.editor.wrapTabs": true,
     "workbench.iconTheme": "material-icon-theme",
     "workbench.preferredDarkColorTheme": "Visual Studio Dark",
-    "github.copilot.nextEditSuggestions.enabled": true
+    "github.copilot.nextEditSuggestions.enabled": true,
+    "gitlens.ai.model": "vscode",
+    "gitlens.ai.vscode.model": "copilot:gpt-4.1"
 }
