--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,6 +12,8 @@
     - command: ./setup_homebrew.zsh
       stdin: true
     - command: ./setup_ohmyzsh.zsh
+    - command: ssh-keygen -t ed25519 -C "todor.ilya@gmail.com"
+      stdin: true
 
 - create:
     - ~/programming/tools/
